--- a/pages/styles.css
+++ b/pages/styles.css
@@ -10,7 +10,11 @@ body {
     display: flex;
     place-content: center flex-start;
     align-items: center;
-    background-color: rgb(0, 0, 0);
+    background-image: url("../assets/background1.jfif");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     flex-flow: column nowrap;
     gap: 10px;
     height: 100vh;
@@ -33,6 +37,12 @@ body {
     position: relative;
     width: auto;
     gap: 64px;
+    background: rgba(255, 255, 255, 0.125);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .header {    
@@ -50,20 +60,24 @@ body {
 
 .header-title h1 {
     width: 100%;
-    font-weight: 700;
+    font-weight: 900;
     font-size: 72px;
     letter-spacing: -4px;
     line-height: 1.2em;
     text-align: center;
     margin: 0;
+    background-image: linear-gradient(90deg, red, blue);
+    background-clip: text;
+    color: transparent;
 }
 
 .header-subtitle h2 {
     font-size: 20px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 800;
     line-height: 1.4em;
-    color: rgba(255, 255, 255, 0.75);
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 2px #000000;
 }
 
 .prompt-container {
@@ -79,15 +93,15 @@ body {
 }
 
 .prompt-box {
-    border-bottom-width: 1px;
-    border-color: rgba(255, 255, 255, 0.1);
-    border-left-width: 1px;
-    border-right-width: 1px;
+    border-bottom-width: 2px;
+    border-color: rgba(255, 255, 255, 0);
+    border-left-width: 2px;
+    border-right-width: 2px;
     border-style: solid;
-    border-top-width: 1px;
+    border-top-width: 2px;
     place-content: flex-start;
     align-items: flex-start;
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: rgba(255, 255, 255, 0.386);
     border-radius: 16px;
     display: flex;
     flex: 0 0 auto;
@@ -108,10 +122,18 @@ body {
     letter-spacing: 0px;
     line-height: 1.6em;
     text-align: start;
-    color: rgba(255, 255, 255, 0.75);
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+    text-shadow: 0px 0px 2px #000000;
     text-decoration: none;
     text-transform: none;
 }
+
+::placeholder { 
+    color: rgb(255, 255, 255);
+    opacity: 1;
+    text-shadow: 0px 0px 2px #000000;
+  }
 
 textarea {
     font-family: 'Manrope', sans-serif;
@@ -172,7 +194,7 @@ textarea {
 .generate-button {
     place-content: flex-start;
     align-items: flex-start;
-    background-color: rgb(255, 79, 18);
+    background-color: rgb(236, 107, 38);
     border-radius: 100px;
     display: flex;
     flex: 0 0 auto;
@@ -298,7 +320,7 @@ textarea {
 
 .output-header h3 {
     font-family: "Manrope", serif;
-    font-size: 28px;
+    font-size: 34px;
     font-style: normal;
     font-weight: 800;
     letter-spacing: 0px;
@@ -308,6 +330,7 @@ textarea {
     text-decoration: none;
     text-transform: none;
     margin: 0;
+    text-shadow: 0px 0px 2px #000000;
 }
 
 .output-content {
@@ -322,8 +345,10 @@ textarea {
 
 .output-content p {
     text-align: center;
+    font-weight: 1000;
     white-space: pre-line;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 2px #000000;
 }
 
 @media (min-width: 810px) and (max-width: 1199px) {
