--- a/pages/styles.css
+++ b/pages/styles.css
@@ -10,7 +10,12 @@ body {
     display: flex;
     place-content: center flex-start;
     align-items: center;
-    background-image: url("../assets/background1.jfif");
+    background-image: 
+      linear-gradient(
+        rgba(0, 0, 0, 0.5),
+        rgba(0, 0, 0, 0.5)
+      ),
+      url("../assets/background5.jfif");
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -37,12 +42,14 @@ body {
     position: relative;
     width: auto;
     gap: 64px;
+    /* glass effect */
     background: rgba(255, 255, 255, 0.125);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
+    /* glass effect */
 }
 
 .header {    
@@ -101,7 +108,7 @@ body {
     border-top-width: 2px;
     place-content: flex-start;
     align-items: flex-start;
-    background-color: rgba(255, 255, 255, 0.386);
+    background-color: rgba(255, 255, 255, 0.215);
     border-radius: 16px;
     display: flex;
     flex: 0 0 auto;
