--- a/pages/styles.css
+++ b/pages/styles.css
@@ -11,10 +11,10 @@ body {
     place-content: center flex-start;
     align-items: center;
     background-image: 
-      linear-gradient(
+      /* linear-gradient(
         rgba(0, 0, 0, 0.5),
         rgba(0, 0, 0, 0.5)
-      ),
+      ), */
       url("../assets/background.png");
     height: 100%;
     background-position: center;
