--- a/pages/styles.css
+++ b/pages/styles.css
@@ -11,10 +11,10 @@ body {
     place-content: center flex-start;
     align-items: center;
     background-image: 
-      /* linear-gradient(
+      linear-gradient(
         rgba(0, 0, 0, 0.5),
         rgba(0, 0, 0, 0.5)
-      ), */
+      ),
       url("https://img.freepik.com/premium-vector/student-pupil-room-workplace-room-vector-cartoon-volumetric-illustration_88272-1582.jpg");
     height: 100%;
     background-position: center;
@@ -43,12 +43,12 @@ body {
     width: auto;
     gap: 64px;
     /* glass effect */
-    /* background: rgba(255, 255, 255, 0.125);
+    background: rgba(255, 255, 255, 0.125);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 0.3); */
+    border: 1px solid rgba(255, 255, 255, 0.3);
     /* glass effect */
 }
 
