--- a/pages/styles.css
+++ b/pages/styles.css
@@ -15,7 +15,7 @@ body {
         rgba(0, 0, 0, 0.5),
         rgba(0, 0, 0, 0.5)
       ),
-      url("./background.png");
+      url("https://res.cloudinary.com/dejrl8xmf/image/upload/v1676404846/background_jpfvcv.png");
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
