--- a/pages/styles.css
+++ b/pages/styles.css
@@ -10,12 +10,13 @@ body {
     display: flex;
     place-content: center flex-start;
     align-items: center;
-    background-image: 
+    /* background-image: 
       linear-gradient(
         rgba(0, 0, 0, 0.5),
         rgba(0, 0, 0, 0.5)
       ),
-      url("https://res.cloudinary.com/dejrl8xmf/image/upload/v1676404846/background_jpfvcv.png");
+      url("https://res.cloudinary.com/dejrl8xmf/image/upload/v1676404846/background_jpfvcv.png"); */
+    background-color: rgb(0, 0, 0);
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -81,7 +82,7 @@ body {
 .header-subtitle h2 {
     font-size: 20px;
     font-style: normal;
-    font-weight: 800;
+    font-weight: 400;
     line-height: 1.4em;
     color: rgb(255, 255, 255);
     text-shadow: 0px 0px 2px #000000;
@@ -114,7 +115,7 @@ body {
     flex: 0 0 auto;
     flex-flow: column nowrap;
     gap: 10px;
-    height: 150px;
+    height: 30px;
     overflow: hidden;
     padding: 20px;
     position: relative;
@@ -130,7 +131,7 @@ body {
     line-height: 1.6em;
     text-align: start;
     color: rgb(255, 255, 255);
-    font-weight: 600;
+    font-weight: 400;
     text-shadow: 0px 0px 2px #000000;
     text-decoration: none;
     text-transform: none;
@@ -351,8 +352,8 @@ textarea {
 }
 
 .output-content p {
-    text-align: center;
-    font-weight: 1000;
+    /* text-align: center; */
+    font-weight: 400;
     white-space: pre-line;
     color: rgb(255, 255, 255);
     text-shadow: 0px 0px 2px #000000;
