--- a/pages/styles.css
+++ b/pages/styles.css
@@ -369,6 +369,39 @@ width: 217px;
     text-shadow: 0px 0px 2px #000000;
 }
 
+.download-button {
+    place-content: flex-start;
+    align-items: flex-start;
+    background-color: rgb(42, 45, 243);
+    border-radius: 100px;
+    display: flex;
+    flex: 0 0 auto;
+    flex-flow: column nowrap;
+    gap: 10px;
+    height: min-content;
+    overflow: hidden;
+    padding: 16px 24px;
+    position: relative;
+    text-decoration: none;
+    width: min-content;
+    will-change: transform;
+    cursor: pointer;
+}
+
+.download {
+    outline: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-shrink: 0;
+    transform: none;
+}
+
+.download p {
+    color: rgb(255, 255, 255);
+    margin: 0;
+}
+
 @media (min-width: 810px) and (max-width: 1199px) {
     .container {
         max-width: 600px;
