some ui changes

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -371,19 +371,19 @@ width: 217px;
 }
 
 .output-content h1 {
-    color:rgb(252, 6, 6);
+    color:rgb(227, 46, 46);
 }
 
 .output-content h2 {
-    color: #082ff0;
+    color: #2f4ee9;
 }
 
 .output-content h3 {
-    color:rgb(234, 251, 4);
+    color:rgb(213, 225, 45);
 }
 
 .output-content h4 {
-    color: #4b05ef;
+    color: #33e133;
 }
 
 .output-content h5 {
