--- a/pages/styles.css
+++ b/pages/styles.css
@@ -534,6 +534,14 @@ width: 217px;
     flex-grow: 1;
 }
 
+.loading-message {
+    text-align: center;
+    font-style: italic;
+    color: gray;
+    padding: 10px;
+    font-size: 20px;
+}
+
 @media (max-width: 556px) {
     .image-section img {
         max-width: 100%;
